<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".module.login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:id="@+id/bt_signin"
            android:background="@color/yellow"
            android:text="@string/signin"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@id/bt_signin"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:background="@color/blue"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/bt_login"
            android:layout_alignParentStart="true"
            android:id="@+id/textInputLayout1"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/yellow">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_ent_code"
                android:inputType="textPassword"
                android:textColorHint="@color/yellow"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/textInputLayout1"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/textInputEditText2"
            android:textColorHint="@color/yellow">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_ent_acc"
                android:textColorHint="@color/yellow"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
