<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:background="@color/yellow"
            android:text="@string/update"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bt_update"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/yellow">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/maintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_ent_maintext"
                android:inputType="text"
                android:textColorHint="@color/yellow" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/textInputLayout1"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/yellow">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/apptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pls_ent_title"
                android:inputType="text"
                android:textColorHint="@color/yellow" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>